style: change margin for all trainings and add articles block

--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ locale }}" dir="{{ dir }}" x-data="{ darkMode: localStorage.getItem('theme') === 'dark' }" x-init="$watch('darkMode', val => { document.documentElement.classList.toggle('dark', val); localStorage.setItem('theme', val ? 'dark' : 'light') })" x-bind:class="{ 'dark': darkMode }">
     <head>
-        <meta charset="UTF-8">
+        <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{ title }}</title>
 
@@ -79,10 +79,7 @@
         </script>
     </head>
     <body style="user-select: none;" class=" text-base-900 dark:bg-gray-900 dark:text-white font-inter antialiased  text-base-900 dark:bg-gray-900 dark:text-white tracking-tight flex flex-col min-h-screen">
-        <nav class="bg-white dark:bg-gray-800  fixed top-0 left-0 w-full bg-white shadow-ajincodew z-50 pt-1" dir="ltr" 
-        x-data="{ navbar: false, scrolled: false }"
-        @scroll.window="scrolled = window.scrollY > 10"
-        :class="scrolled ? 'border-b border-gray-200' : ''">
+        <nav class="bg-white dark:bg-gray-800  fixed top-0 left-0 w-full bg-white shadow-ajincodew z-50 pt-1" dir="ltr" x-data="{ navbar: false, scrolled: false }" @scroll.window="scrolled = window.scrollY > 10" :class="scrolled ? 'border-b border-gray-200' : ''">
             <div class="relative max-w-7xl mx-auto px-5 sm:px-6">
                 <div class="justify-between md:items-center md:flex md:px-6">                    
                     <div>
@@ -180,6 +177,10 @@
                             </li>
 
                             <li class="transition-transform transform hover:scale-105">
+                                <a href="/ar/articles">مقالات</a>
+                            </li>
+
+                            <li class="transition-transform transform hover:scale-105">
                                 <a href="/">الرئيسية</a>
                             </li>
 
@@ -207,21 +208,21 @@
                 <div class="py-4 md:py-6">
                     <div>
                         <div class="mb-2 flex flex-col md:flex-row rtl:md:flex-row-reverse gap-4 space-between items-center md:gap-8">
-                            <a to={("/ar")} aria-label="Cruip" class="inline-block text-sm   hover:underline transition duration-150 ease-in-out">
+                            <a href="/ar" aria-label="Cruip" class="inline-block text-sm   hover:underline transition duration-150 ease-in-out">
                                 {% image "src/assets/images/logo.png", "Ajincodew Academy", ["webp", "png"], [600, 1200], "(min-width: 65px) 520px, 518px", {class:"w-20 md:w-10 ml-0"} %}
                             </a>
 
-                            <a to={("/ar/responsibility")}
+                            <a href="/ar/responsibility"
                             class="text-sm  hover:underline transition duration-150 ease-in-out text-sm   hover:underline transition duration-150 ease-in-out">
                                 إخلاء المسؤولية
                             </a>
 
-                            <a to={("/ar/privacy")}
+                            <a href="/ar/privacy"
                             class="text-sm  hover:underline transition duration-150 ease-in-out text-sm hover:underline transition duration-150 ease-in-out">
                                 سياسة الخصوصية
                             </a>
 
-                            <a to={("/ar/termsofuse")}
+                            <a href="/ar/termsofuse"
                             class="text-sm hover:underline transition duration-150 ease-in-out text-sm hover:underline transition duration-150 ease-in-out">
                                 شروط الاستخدام
                             </a>
