--- a/src/_includes/pages/javascript.njk
+++ b/src/_includes/pages/javascript.njk
@@ -8,7 +8,7 @@ plugins:
 ---
 
 <main class="flex-grow pt-12"> 
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="flex flex-col md:flex-row gap-1 lg:gap-10 mt-6">
             <!-- Text Container: Always on the right -->
             <div class="flex flex-col justify-center items-center flex-shrink-0 p-2 md:p-0 md:w-2/3" dir="{{ dir }}">
@@ -37,7 +37,7 @@ plugins:
         </div>
     </section>
 
-    <div style="max-width: 100rem;" class='flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative md:mx-auto md:justify-center'>
+    <div class='"max-w-7xl flex flex-col-reverse md:flex-row-reverse md:ltr:flex-row relative md:mx-auto md:justify-center'>
         <section class="relative " id="content">
             <div class="relative max-w-6xl mx-auto px-4 md:px-0 md:mx-0">
                 <div class="max-w-3xl mx-auto text-right ltr:text-left py-4 px-2 sm:px-4 md:py-6">
@@ -159,7 +159,7 @@ plugins:
         </section> 
     </div>
 
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>أكثر من مجرد تدريب</p>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             <div class="flex flex-row-reverse items-start text-right ltr:text-left ml-auto rounded-2xl border p-4 ms-2 me-2">
@@ -193,7 +193,7 @@ plugins:
         <div id="pricing"></div>
     </section>
     
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
             <div class="flex flex-col justify-center items-start px-4">
                 <p class="text-2xl md:text-3xl font-bold text-right  mb-2">الاستثمار الذي سيغير حياتك للأبد !</p>
@@ -271,7 +271,7 @@ plugins:
         </div>
     </section>
 
-    <section style="max-width: 100rem;" class="relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
       <div class="py-8 md:py-8">
         <div class="md:gap-4">
           <div class="max-w-xl md:max-w-none md:w-full mx-auto md:col-span-7 lg:col-span-6 md:mt-6">
