--- a/src/_includes/pages/articles/all/spring.njk
+++ b/src/_includes/pages/articles/all/spring.njk
@@ -45,7 +45,7 @@ title: "إطار عمل سبرينغ"
       </div>
     <!-- Image on the left -->
       <div class="md:w-1/3 md:pl-6 mt-6 md:mt-0">
-        {% image "src/assets/images/articles/spring.JPEG", "Spring article", ["JPEG","JPEG"], [300,600], "(min-width: 780px) 360px, 259px", {class:"w-full h-auto object-contain"} %}
+        {% image "src/assets/images/articles/spring.jpeg", "Spring article", ["jpeg","jpeg"], [300,600], "(min-width: 780px) 360px, 259px", {class:"w-full h-auto object-contain"} %}
       </div>
     </div>
     <div class="flex flex-col md:flex-row items-start">      
