--- a/src/_includes/pages/articles/all/spring.njk
+++ b/src/_includes/pages/articles/all/spring.njk
@@ -23,24 +23,24 @@ title: "إطار عمل سبرينغ"
           مفهوم حقن التبعية في سبرينغ
         </h2>
         <p>
-          من مميزات إطار سبرينغ المهمة هو الاعتماد على مبدأ عكس التحكم، والتطبيق ديال هاد المبدأ في سبرينغ يسمى حقن التبعية.
+          من مميزات إطار سبرينغ المهمة هو الاعتماد على مبدأ عكس التحكم، والتطبيق ديال هذا المبدأ في سبرينغ يسمى حقن التبعية.
         </p>
         <p>
-          في هاد المقال غادي نشرح ليكم هذا المبدأ المبدأ عميق، ولكن الهدف هو تقديم فكرة مبسطة.
+          في هذا المقال، سنشرح لكم هذا المبدأ بشكل مبسط.
         </p>
         <p>
-          مبدأ حقن التبعية بسيط في الفهم وفي نفس الوقت ضروري باش نفهمو كيفاش كيتعمل سبرينغ. إذا فهمتو هاد المبدأ، غادي تلاحظو أن العمل بالفريمورك سهل بزاف.
+          مبدأ حقن التبعية سهل الفهم، وفي نفس الوقت ضروري لفهم كيفية عمل سبرينغ. إذا فهمتم هذا المبدأ، ستلاحظون أن العمل باستخدام الفريمورك سهل للغاية.
         </p>
 
         <h3 class="mb-4 text-md font-semibold mt-6 text-green-600">شرح مبدأ حقن التبعية</h3>
         <p>
-          باش نشرح ليكم حقن التبعية، خاصكم تعرفو أن سبرينغ هو اللي كيتكلف بإنشاء الكائنات ديال جافا وهو اللي كيمررهم لينا. باش نشرح ليكم أكثر، غادي نعطيكم مثال.
+          لكي نشرح لكم حقن التبعية، يجب أن تعرفوا أن سبرينغ هو الذي يتكفل بإنشاء الكائنات في جافا وهو الذي يقوم بتمريرها لنا عندما نحتاجها. سأعطيكم مثالاً لتوضيح الفكرة.
         </p>
         <p>
-          مثلاً، فجاڤا ملي بغينا نخدمو بكلاس، يقدر يكونو فيها كائنات أخرى متعلقة بالكلاس، واللي كيتسميو التبعيات ديال الكلاس.
+          على سبيل المثال، في جافا عندما نريد العمل مع صنف، قد يحتوي هذا الصنف على كائنات أخرى مرتبطة به وتسمى التبعيات.
         </p>
         <p>
-          فالكثير من الأحيان، إذا البرنامج ماعطيناش خطأ، ضروري يكونو هاد الكائنات قد تم إنشاؤهم قبل ما نحتاجوهم.
+          في كثير من الأحيان، إذا لم يعطنا البرنامج أي خطأ، يجب أن تكون هذه الكائنات قد تم إنشاؤها قبل أن نحتاج إليها.
         </p>
       </div>
     <!-- Image on the left -->
@@ -52,10 +52,10 @@ title: "إطار عمل سبرينغ"
         <div class="md:pl-6 mt-6 md:mt-0">
             <h3 class="mb-4 text-md font-semibold mt-6 text-green-600">العلاقة بين المثال وحقن التبعية في سبرينغ</h3>
                 <p>
-                العملية هي أن سبرينغ هو اللي غيتكلف بإنشاء هاد الكائنات وهو اللي غيمررهم لينا ملي نحتاجوهم.
+                العملية هي أن سبرينغ هو الذي سيتكفل بإنشاء هذه الكائنات وهو الذي سيمررها لنا عندما نحتاج إليها.
                 </p>
                 <p>
-                سبرينغ عندو واحد الحاوية أو السياق اللي كيحتفظ فيها بالكائنات اللي كنديكلاري عليهم في الكلاسات، وعندما نحتاجو شي كائن، سبرينغ هو اللي غادي يوفره لينا. هذا هو بالضبط مفهوم عكس التحكم وحقن التبعية. بمعنى آخر، الفريمورك هو اللي كيتحمل المسؤولية في إنشاء الكائنات وحنا كتركزو فقط على تطوير تطبيق الويب.
+                سبرينغ يحتوي على حاوية أو سياق يحتفظ بالكائنات التي نقوم بتعريفها في الأصناف، وعندما نحتاج إلى كائن معين، سبرينغ هو الذي سيوفره لنا. هذا هو بالضبط مفهوم عكس التحكم وحقن التبعية. بمعنى آخر، الفريمورك هو المسؤول عن إنشاء الكائنات بينما نحن نركز فقط على تطوير تطبيق الويب.
                 </p>
 
                 <p class="mt-8 text-center font-bold text-green-600">
