feat: add search bar and enhance content

--- a/src/_includes/pages/articles/articles.njk
+++ b/src/_includes/pages/articles/articles.njk
@@ -11,10 +11,10 @@ plugins:
     <section class="relative max-w-6xl mx-auto px-5 sm:px-6 mb-6">
         <div class="container mx-auto flex flex-col items-center ">
             <div class="grid grid-cols-1 pt-16">
-                <p class="text-3xl md:text-4xl font-bold ltr:text-left rtl:text-right ltr:md:text-center rtl:md:text-center mb-4 leading-tighter">
+                <p class="text-3xl md:text-4xl font-bold ltr:text-left rtl:text-center ltr:md:text-center rtl:md:text-center mb-4 leading-tighter">
                     اكتشفوا معنا أحدث المقالات في مجال التكنولوجيا!
                 </p>
-                <p class="text-base md:text-xl ltr:text-left rtl:text-right ltr:md:text-center rtl:md:text-center text-gray-700 mb-4 md:max-w-3xl">
+                <p class="text-base md:text-xl ltr:text-left rtl:text-center ltr:md:text-center rtl:md:text-center text-gray-700 mb-4 md:max-w-3xl">
                     في مدونة أكاديمية آجينكوديو، نشارك معكم تجاربنا، نصائحنا، وأفضل الممارسات لمساعدتكم في تطوير مساركم المهني في مجال البرمجة والتطوير.
                 </p>
             </div>
