--- a/src/_includes/main.njk
+++ b/src/_includes/main.njk
@@ -78,7 +78,7 @@
         <meta name="facebook-domain-verification" content="shf31z6j1ih9ff63lf5inn2c4gouo9" />
         </script>
     </head>
-    <body style="user-select: none;" class=" text-base-900 dark:bg-gray-900 dark:text-white font-inter antialiased  text-base-900 dark:bg-gray-900 dark:text-white tracking-tight flex flex-col min-h-screen">
+    <body class=" text-base-900 dark:bg-gray-900 dark:text-white font-inter antialiased  text-base-900 dark:bg-gray-900 dark:text-white tracking-tight flex flex-col min-h-screen">
         <nav class="bg-white dark:bg-gray-800  fixed top-0 left-0 w-full bg-white shadow-ajincodew z-50 pt-1" dir="ltr" x-data="{ navbar: false, scrolled: false }" @scroll.window="scrolled = window.scrollY > 10" :class="scrolled ? 'border-b border-gray-200' : ''">
             <div class="relative max-w-7xl mx-auto px-5 sm:px-6">
                 <div class="justify-between md:items-center md:flex md:px-6">                    
@@ -177,7 +177,11 @@
                             </li>
 
                             <li class="transition-transform transform hover:scale-105">
-                                <a href="/ar/articles">مقالات</a>
+                                <a href="/ar/aboutus">من نحن</a>
+                            </li>
+
+                            <li class="transition-transform transform hover:scale-105">
+                                <a href="/ar/events">مجتمع</a>
                             </li>
 
                             <li class="transition-transform transform hover:scale-105">
