--- a/src/_includes/pages/events.njk
+++ b/src/_includes/pages/events.njk
@@ -12,7 +12,7 @@ plugins:
     <div class="relative flex flex-col items-center mx-auto max-w-screen-2xl px-4 pt-4 mt-6">
       
       <div class="relative w-full max-w-3xl h-[340px] overflow-hidden rounded-lg">
-        {% image "src/assets/images/event.svg", "امرأة تبتسم", ["webp","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
+        {% image "src/assets/images/event.png", "امرأة تبتسم", ["webp","svg"], [600,1200], "(min-width: 780px) 720px, 518px", {class:"absolute inset-0 h-full mx-auto w-fit object-contain"} %}
       </div>
 
       <div class="text-center mt-6">
