--- a/src/_includes/pages/home.njk
+++ b/src/_includes/pages/home.njk
@@ -78,7 +78,7 @@
         <div id="pricing"></div>
     </section>
 
-    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6">
+    <section class="max-w-7xl relative mx-auto px-5 sm:px-6 mb-6 pt-6 mt-6" id="trainings">
         <p class='text-center text-2xl md:text-3xl font-bold mb-2'>تدريباتنا</p>            
             <!-- Search Bar -->
             <div class="flex justify-center mb-8">
