--- a/src/_includes/pages/frontend.njk
+++ b/src/_includes/pages/frontend.njk
@@ -291,8 +291,9 @@ plugins:
                     </div>
                     <p class="text-gray-600 text-right mb-2">🧾 ادفع كل شهر على حدة</p>     
                     <p class="text-gray-600 text-right mb-2">📚 وصول كامل لمحتوى التدريب</p>     
-                    <p class="text-gray-600 text-right mb-2">💡 مناسب لمن يفضل الدفع بالتقسيط</p>     
-                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
+                    <p class="text-gray-600 text-right mb-2">💡 مناسب لمن يفضل الدفع بالتقسيط</p>    
+                    <p class="text-gray-600 text-right mb-2">📄 تحسين وتطوير السيرة الذاتية الخاصة بك</p> 
+                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20199%20%D8%AF%D8%B1%D9%87%D9%85."
                         onClick="fbq('track', 'Lead')" 
                         class="w-full py-1 rounded-md text-base md:text-lg font-medium text-center text-white bg-[#0fb579]">تسجيل</a>
                 </div> 
@@ -310,7 +311,8 @@ plugins:
                         <p class="text-md text-right mb-2 mt-1">💸 وفر 300 درهم مقارنة بالدفع الشهري</p>     
                         <p class="text-md text-right mb-2 mt-1">💳 دفع مرة واحدة يشمل 3 أشهر كاملة</p>     
                         <p class="text-md text-right mb-2 mt-1">⏳ عرض محدود - ينتهي في نهاية هذا الشهر</p>     
-                        <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
+                        <p class="text-md text-right mb-2 mt-1">📄 تحسين وتطوير السيرة الذاتية الخاصة بك</p> 
+                        <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20399%20%D8%AF%D8%B1%D9%87%D9%85."
                             onClick="fbq('track', 'Lead')" 
                             class="w-full py-1 rounded-md  text-base md:text-lg font-medium text-center bg-white text-[#0fb579]">تسجيل</a>
                 </div>
@@ -325,12 +327,13 @@ plugins:
                         <p class=" text-5xl md:text-6xl font-bold text-right text-white pe-2">499</p>
                         <a class="text-lg md:text-xl font-semibold text-right text-white">درهم </a>              
                     </div>
-                        <p class="text-md text-right mb-2 mt-1 text-white">💸 وفر 300 درهم مقارنة بالدفع الشهري</p>     
-                        <p class="text-md text-right mb-2 mt-1 text-white">💳 دفع مرة واحدة يشمل 3 أشهر كاملة</p>     
-                        <p class="text-md text-right mb-2 mt-1 text-white">🎯 الخيار الأفضل للاستفادة بأقصى قيمة</p>     
-                        <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20599%20%D8%AF%D8%B1%D9%87%D9%85."
-                            onClick="fbq('track', 'Lead')" 
-                            class="w-full py-1 rounded-md  text-base md:text-lg font-medium text-center  bg-white  text-[#120a3b]">تسجيل</a>
+                    <p class="text-md text-right mb-2 mt-1 text-white">💸 وفر 300 درهم مقارنة بالدفع الشهري</p>     
+                    <p class="text-md text-right mb-2 mt-1 text-white">💳 دفع مرة واحدة يشمل 3 أشهر كاملة</p>     
+                    <p class="text-md text-right mb-2 mt-1 text-white">🎯 الخيار الأفضل للاستفادة بأقصى قيمة</p> 
+                    <p class="text-md text-right mb-2 mt-1 text-white">🎤 التحضير المثالي لمقابلات العمل</p>
+                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20499%20%D8%AF%D8%B1%D9%87%D9%85."
+                        onClick="fbq('track', 'Lead')" 
+                        class="w-full py-1 rounded-md  text-base md:text-lg font-medium text-center  bg-white  text-[#120a3b]">تسجيل</a>
                 </div>
             </div> 
         </div>
