--- a/src/_includes/pages/frontend.njk
+++ b/src/_includes/pages/frontend.njk
@@ -295,7 +295,10 @@ plugins:
                     <p class="text-gray-600 text-right mb-2">📄 تحسين وتطوير السيرة الذاتية الخاصة بك</p> 
                     <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20199%20%D8%AF%D8%B1%D9%87%D9%85."
                         onClick="fbq('track', 'Lead')" 
-                        class="w-full py-1 rounded-md text-base md:text-lg font-medium text-center text-white bg-[#0fb579]">تسجيل</a>
+                        class="w-full py-1 rounded-md text-base md:text-lg font-medium text-center text-white bg-[#0fb579]">
+                      تسجيل
+                    </a>
+
                 </div> 
 
                 <div class="transition-transform transform hover:scale-105 mt-2 relative flex flex-col justify-between items-start h-70 md:h-100 w-full p-4 rounded-2xl border shadow-sm bg-[#0fb579] text-white">
