--- a/src/_includes/pages/backend.njk
+++ b/src/_includes/pages/backend.njk
@@ -327,7 +327,8 @@ plugins:
                     <p class="text-gray-600 text-right mb-2">📚 وصول كامل لمحتوى التدريب</p>     
                     <p class="text-gray-600 text-right mb-2">💡 مناسب لمن يفضل الدفع بالتقسيط</p>    
                     <p class="text-gray-600 text-right mb-2">📄 تحسين وتطوير السيرة الذاتية الخاصة بك</p> 
-                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AB%D9%84%D8%A7%D8%AB%D8%A9%20%D8%B4%D9%87%D9%88%D8%B1%20%D8%A8%D9%80%20199%20%D8%AF%D8%B1%D9%87%D9%85."
+                    <a href="https://api.whatsapp.com/send?phone=212612527672&text=%D8%A8%D8%BA%D9%8A%D8%AA%20%D9%86%D8%B3%D8%AC%D9%84%20%D9%81%D9%8A%20%D8%A7%D9%84%D8%AA%D8%AF%D8%B1%D9%8A%D8%A8%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%AA%D8%B7%D9%88%D9%8A%D8%B1%20%D8%A7%D9%84%D9%88%D8%A7%D8%AC%D9%87%D8%A9%20%D8%A7%D9%84%D8%AE%D9%84%D9%81%D9%8A%D8%A9%20%D8%A8%D8%A7%D9%84%D8%B9%D8%B1%D8%B6%20%D8%AF%D9%8A%D8%A7%D9%84%20%D8%A7%D9%84%D8%AF%D9%81%D8%B9%20%D8%A8%D9%80%20199%20%D8%AF%D8%B1%D9%87%D9%85%20%D9%83%D9%84%20%D8%B4%D9%87%D8%B1.
+"
                         onClick="fbq('track', 'Lead')" 
                         class="w-full py-1 rounded-md text-base md:text-lg font-medium text-center text-white bg-[#0fb579]">
                       تسجيل
